@@ -355,6 +355,8 @@ PHP                                                                        NEWS
 - DOM:
   . Fixed bug #79451 (DOMDocument->replaceChild on doctype causes double free).
     (Nathan Freeman)
+  . Fixed bug #80332 (Completely broken array access functionality with
+    DOMNamedNodeMap). (Nathan Freeman)
 
 - FPM:
   . Fixed bug GH-8885 (FPM access.log with stderr begins to write logs to
